[style] fixed timeline circle alignment

--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -34,7 +34,7 @@ $timeline-bullet-width: .7em; // Diameter of the bullet point on the timeline.
 
   &::before {
     content: '';
-    position: relative;
+    position: absolute;
     width: 10px;
     height: 10px;
     display: flex;
@@ -42,7 +42,7 @@ $timeline-bullet-width: .7em; // Diameter of the bullet point on the timeline.
     border-radius: 50%;
     background-color: #2c3e50;
     /* top: 10px; */
-    left: -21px;
+    left: -6px;
   }
   // &::after {
   //     content: '';
